# ModelReader

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.txt  app_version.py  build_dmg.sh  clipboard_reader.py  icon.icns  minimax_system_voices.json  parse_epub.py  png_to_icns.py  pyproject.toml  reading_samples.txt  setup.py  test.py  获取所有支持的系统音色.py
tests/: test_clipboard_reader.py
